# p4mlir-incubator

include/p4mlir/Conversion/: ConversionPatterns.h  P4ToLLVM.h  Passes.h  Passes.td
include/p4mlir/Transforms/: IRUtils.h  Passes.h  Passes.td
lib/Conversion/: CMakeLists.txt  ConversionPatterns.cpp  LowerCoreLibToLLVM.cpp  LowerEBPFToLLVM.cpp  LowerP4HIRToLLVM.cpp  LowerP4HIRToMLIRCore.cpp  LowerToLLVM.cpp  P4HIRToCoreLib.cpp
lib/Dialect/P4HIR/: CMakeLists.txt  P4HIRToLLVMIRTranslation.cpp  P4HIR_Ops.cpp
lib/P4C/: translate.cpp
lib/Transforms/: CMakeLists.txt  CopyInCopyOutElimination.cpp  EnumElimination.cpp  FlattenCFG.cpp  IRUtils.cpp  IRUtils.h  InlineParserControl.cpp  InlineParsers.cpp  InlineSubparsers.cpp  RemoveAliases.cpp  RemoveParserControlFlow.cpp  RemoveSoftCF.cpp  SerEnumElimination.cpp  SimplifySelect.cpp
test/: CMakeLists.txt  lit.cfg.py
test/Conversion/P4CoreLib/: control_locals.mlir
test/Dialect/P4HIR/: slice.mlir
test/Transforms/Flatten/: if.mlir  scope.mlir  ternary.mlir
test/Transforms/Folds/: scope.mlir  variable.mlir
test/Transforms/Passes/: inline-subparsers-1.mlir  inline-subparsers-2.mlir  inline-subparsers-3.mlir  inline-subparsers-4.mlir  inline-subparsers-5.mlir  inline-subparsers-6.mlir  remove-parser-ifs.mlir  remove-soft-cf-if-switch.mlir  remove-soft-cf-loop.mlir  simplify-select-flatten-tuples.mlir
test/Translate/Ops/: for.p4  function.p4  slice.p4
tools/: CMakeLists.txt
tools/p4mlir-ebpf/: CMakeLists.txt  ebpf_runtime.c  p4mlir-ebpf  p4mlir-ebpf.cpp
tools/p4mlir-translate/: main.cpp  translate.cpp
(+26 files in other folders)
